# Trabalho-Engenharia_de_Software

./: README.md  T1  T2  banco_dados.db  test_educautfpr_completo.py
Código final/: CMakeLists.txt  agendaacademicadialog.cpp  agendaacademicadialog.h  agendaacademicadialog.ui  avaliacaomateriasdialog.cpp  avaliacaomateriasdialog.ui  banco_dados.db  chatmateria.cpp  chatmateria.ui  criarconta.ui  criargrupodialog.ui  duvidasdialog.cpp  duvidasdialog.h  duvidasdialog.ui  forumdialog.cpp  forumdialog.ui  forumpostsdialog.cpp  forumpostsdialog.h  forumpostsdialog.ui  forumpostsdialog.ui.autosave  grupoestudodialog.cpp  grupoestudodialog.h  grupoestudodialog.ui  logindialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  perfildialog.cpp  perfildialog.ui
codigofinal/: CMakeLists.txt  agendaacademicadialog.cpp  agendaacademicadialog.ui  avaliacaomateriasdialog.h  banco_dados.db  chatmateria.cpp  chatmateria.h  chatmateria.ui  criarconta.cpp  criarconta.ui  criargrupodialog.cpp  criargrupodialog.h  criargrupodialog.ui  duvidasdialog.h  duvidasdialog.ui  forumdialog.cpp  forumdialog.h  forumpostsdialog.cpp  grupoestudodialog.ui  icons.qrc  logindialog.cpp  mainwindow.h  perfildialog.cpp  perfildialog.h  perfildialog.ui
